show reaction by id

--- a/src/RegistryTool/FormMetabolicEditor.resx
+++ b/src/RegistryTool/FormMetabolicEditor.resx
@@ -181,4 +181,40 @@
         AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="ToolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbnSURBVHhe7Zz5b1RVFMfBqD8hLjGA/iJLDRghAW3/AH9T
+        ExJRTPQHMTRQNllbRLG0gChLaWnZ22npTAsoS6ISiaKJpQpqZE1a1nY6C6Vl2s7SAg4z057jOW/uQNHB
+        LkDffe/dT/LNpJBp537OfefNvHn3DlIoFAqFQqFQKBSKgaYCYJgdYCol194FX9k74dSuGDRQAuUxiJZH
+        IVoWhQD/Wyn/XxT20s85pTF4h58rfo2iL1QCpDm6oKC8E2oo4ABEe9fdKed0xrOrW8pid1ISASiOQo0t
+        Avk7o5Aqfr0iGSR9KM3YrIpOOF9Bwll6Iv2RX0qxReMpicRTHIFzO25BVinAE+LPKvYBPEPiV1GLCbD4
+        hycfceeteHaEIbAtjCu3h/Bp8TKsByIOJvHTaOa3VNAPAyafsj0cz9Yw+LfchIW5iI+Il2UNSHwKiT9e
+        yeJ1kk9HAG79O54tN+BYURjGiJdnbkj8FEpQGvk3ETdrgY7C6/CeeJnmgw9zmvmbWLx88hGLbiAWaoF8
+        07Wk/YiPOwD2yi8fcdN1xIIO2FOM+Jh4+caG5VPLOWwY+SL5HfC94YtArgeTfIfx5CNupGxoh72GbkfG
+        6PnJ5W9sR8yjrA9BnhiOsSDh7xpd/gatAIhfhuB9MSxjQJ9qxzgQQ2aQv44TxNDaEI4Ww5Mb8s19X54P
+        WfcvH9cG6Chog195bGKY8kLyZ5hOPuULP+LnbfChGKac8IU1er/fakb5a+IF8OUG8SkxXPmgdz2rzSsf
+        cTVlVQvkiOHKBbWeoQN6SVkP+a2IK33gX9oq4fcJNPuzTC+fktuCuKIFlohhy4O9E2qsID+Hku2Dc2LY
+        ckDtJ80q8nN8dARQsltgkhi+/vAX6JaSfw1xebNElygcnVBrJfmfNSN+0gxnxPD1hU6+w+7n1hEjyl9O
+        +bQRYMlVfFZo0A++acpy8pvoCKB83ARvCw364ejClVaUv+wqFaARVggN+qHdLmhF+ZSsRtgtNOiHvRNP
+        WlH+0katAH8JDfphj4HbmvIRF1+BBqFBP6gAfivKz7qCmOmBVqFBP8piELGa/EyWT1nihVtCg36UReMF
+        sIp8beZr8qkFyVCA8ij4rSL/zsxn+YgLXBK0oF1RcFtv5iMu8iAu9EhwEi6jt6FWm/lx+YgfuSR4G6qt
+        yTKx/OQzn9qPG3G+CyqFBv0ojUKu1WZ+XD4dAQ2QLTToB69GtN7M5/aDOM8FU4QG/eDL0bwa0Uzye5z5
+        lDn10JVxUYLL0Yy2FNRC8uc1IM51wmkxfP2hI6DADPJ71XZYPmWOEzaI4esPL4K2zMzX5NOjCyeK4ctB
+        cRhqrCJ/tlOy21IYXoFu/rbD8hEz6iS8MYuX//MKdHPPfMRZdeBPvyDpVgfbw7DK1PLrEWdeluB74HvB
+        ey9sC0OLWeVnXIJrGU58UgxXTraGId2U8usQ0+vgAzFMeeFlPLz3gtnkz6iDahrcYDFMueGNLwpvYsgs
+        8qdfiEamXTbYZh5FHTDVHDMf8dX9tTiq9I9iwxwBCXjjC73l9+d9fnf5rx1x40jb7/hi5Vl86cBFYxWB
+        zwcF16HcqDP/zaPNJP84plScxnH7L+CEQx585SffTkMVgTe8yOuAw0aTP/lYK44sOY5jHKdw3L7zOP47
+        F046cg3TqtsxrardWEXIRXw0LwRlRpH/RlVTXL79JI79+hyO/7YBJ/7YjKlHQ/ECUFKrg0WGa0e88YXs
+        8rnnv1B8TJv5LP/lb5w48YcmTK0K3pZ/O1WhQkMVgVkfxLfW+SEg2wk3/WIsknqwVjvhpjhO49h9JJ9n
+        viY/kER+sGvswZbfnivxGqsdMbzxBe+9IIt8/pA1/RKOHlX6Z1FK5RnthMs9X2s7SWe+kG/zohYjFoFb
+        0po2mMbL//WTD/4Z9ZhxWx49jjtwqXDCIbd2wu3e8+8p38hFYHjvBV7+zyvQB6rnz6yHNr6qmfTCGkmc
+        9LOv8D/i/09+IkYtApPrwyG8Aj3HB7UPa+ZnOKFm1mVYPLcWh4g/mxySmFYdursIPclPxMhFSMCLoHkd
+        7vImOLusEbr6O/P51pHZ9XCGv0Dv83e43YvQW/mJmKEICXgpKK9GXNoI2ZQ9mY1wIvMKOCn+RV6ILKQs
+        cIF/vhuc9HhiXgPs5jvW+Kap+75vh4vwS2hTn+QnYqYi6ApJHFHiLUoquaeoIjwgVBEkQBVBAlQRJEAV
+        QQJUESRAFUECVBEkgItg82xOKrmnlHiMuTG4dPSzCMNtbv3XGZuGPhZheLE3PMLmfV08W/FA6OU5geRH
+        nrd5JotnKR4oPRRByR8I7lEEJX8g+VcRlHw9oCKQ/PzhJe42dcJVKBQKhUKhUCgUvWPQoH8AIFtSl1Lm
+        cRUAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
