run package msbuild

--- a/man/biocad_registry/setup/setup/setup_chebi.1
+++ b/man/biocad_registry/setup/setup/setup_chebi.1
@@ -5,6 +5,7 @@ setup_chebi \-
 .SH SYNOPSIS
 \fIsetup_chebi(\fBregistry\fR as <generic> biocad_registry, 
 \fBchebi\fR as <generic> OBOFile, 
+\fBinit_ontology\fR as boolean = TRUE, 
 [\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 setup
