run package msbuild

--- a/man/biocad_registry/setup/setup/setup_ko.1
+++ b/man/biocad_registry/setup/setup/setup_ko.1
@@ -4,7 +4,7 @@
 setup_ko \- 
 .SH SYNOPSIS
 \fIsetup_ko(\fBregistry\fR as <generic> biocad_registry, 
-\fBko\fR as any, 
+\fBko\fR as any = \fB<NULL>\fR, 
 [\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 setup
