--- a/src/RegistryTool/FormMetabolicEditor.resx
+++ b/src/RegistryTool/FormMetabolicEditor.resx
@@ -184,37 +184,70 @@
   <data name="ToolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbnSURBVHhe7Zz5b1RVFMfBqD8hLjGA/iJLDRghAW3/AH9T
-        ExJRTPQHMTRQNllbRLG0gChLaWnZ22npTAsoS6ISiaKJpQpqZE1a1nY6C6Vl2s7SAg4z057jOW/uQNHB
-        LkDffe/dT/LNpJBp537OfefNvHn3DlIoFAqFQqFQKBSKgaYCYJgdYCol194FX9k74dSuGDRQAuUxiJZH
-        IVoWhQD/Wyn/XxT20s85pTF4h58rfo2iL1QCpDm6oKC8E2oo4ABEe9fdKed0xrOrW8pid1ISASiOQo0t
-        Avk7o5Aqfr0iGSR9KM3YrIpOOF9Bwll6Iv2RX0qxReMpicRTHIFzO25BVinAE+LPKvYBPEPiV1GLCbD4
-        hycfceeteHaEIbAtjCu3h/Bp8TKsByIOJvHTaOa3VNAPAyafsj0cz9Yw+LfchIW5iI+Il2UNSHwKiT9e
-        yeJ1kk9HAG79O54tN+BYURjGiJdnbkj8FEpQGvk3ETdrgY7C6/CeeJnmgw9zmvmbWLx88hGLbiAWaoF8
-        07Wk/YiPOwD2yi8fcdN1xIIO2FOM+Jh4+caG5VPLOWwY+SL5HfC94YtArgeTfIfx5CNupGxoh72GbkfG
-        6PnJ5W9sR8yjrA9BnhiOsSDh7xpd/gatAIhfhuB9MSxjQJ9qxzgQQ2aQv44TxNDaEI4Ww5Mb8s19X54P
-        WfcvH9cG6Chog195bGKY8kLyZ5hOPuULP+LnbfChGKac8IU1er/fakb5a+IF8OUG8SkxXPmgdz2rzSsf
-        cTVlVQvkiOHKBbWeoQN6SVkP+a2IK33gX9oq4fcJNPuzTC+fktuCuKIFlohhy4O9E2qsID+Hku2Dc2LY
-        ckDtJ80q8nN8dARQsltgkhi+/vAX6JaSfw1xebNElygcnVBrJfmfNSN+0gxnxPD1hU6+w+7n1hEjyl9O
-        +bQRYMlVfFZo0A++acpy8pvoCKB83ARvCw364ejClVaUv+wqFaARVggN+qHdLmhF+ZSsRtgtNOiHvRNP
-        WlH+0katAH8JDfphj4HbmvIRF1+BBqFBP6gAfivKz7qCmOmBVqFBP8piELGa/EyWT1nihVtCg36UReMF
-        sIp8beZr8qkFyVCA8ij4rSL/zsxn+YgLXBK0oF1RcFtv5iMu8iAu9EhwEi6jt6FWm/lx+YgfuSR4G6qt
-        yTKx/OQzn9qPG3G+CyqFBv0ojUKu1WZ+XD4dAQ2QLTToB69GtN7M5/aDOM8FU4QG/eDL0bwa0Uzye5z5
-        lDn10JVxUYLL0Yy2FNRC8uc1IM51wmkxfP2hI6DADPJ71XZYPmWOEzaI4esPL4K2zMzX5NOjCyeK4ctB
-        cRhqrCJ/tlOy21IYXoFu/rbD8hEz6iS8MYuX//MKdHPPfMRZdeBPvyDpVgfbw7DK1PLrEWdeluB74HvB
-        ey9sC0OLWeVnXIJrGU58UgxXTraGId2U8usQ0+vgAzFMeeFlPLz3gtnkz6iDahrcYDFMueGNLwpvYsgs
-        8qdfiEamXTbYZh5FHTDVHDMf8dX9tTiq9I9iwxwBCXjjC73l9+d9fnf5rx1x40jb7/hi5Vl86cBFYxWB
-        zwcF16HcqDP/zaPNJP84plScxnH7L+CEQx585SffTkMVgTe8yOuAw0aTP/lYK44sOY5jHKdw3L7zOP47
-        F046cg3TqtsxrardWEXIRXw0LwRlRpH/RlVTXL79JI79+hyO/7YBJ/7YjKlHQ/ECUFKrg0WGa0e88YXs
-        8rnnv1B8TJv5LP/lb5w48YcmTK0K3pZ/O1WhQkMVgVkfxLfW+SEg2wk3/WIsknqwVjvhpjhO49h9JJ9n
-        viY/kER+sGvswZbfnivxGqsdMbzxBe+9IIt8/pA1/RKOHlX6Z1FK5RnthMs9X2s7SWe+kG/zohYjFoFb
-        0po2mMbL//WTD/4Z9ZhxWx49jjtwqXDCIbd2wu3e8+8p38hFYHjvBV7+zyvQB6rnz6yHNr6qmfTCGkmc
-        9LOv8D/i/09+IkYtApPrwyG8Aj3HB7UPa+ZnOKFm1mVYPLcWh4g/mxySmFYdursIPclPxMhFSMCLoHkd
-        7vImOLusEbr6O/P51pHZ9XCGv0Dv83e43YvQW/mJmKEICXgpKK9GXNoI2ZQ9mY1wIvMKOCn+RV6ILKQs
-        cIF/vhuc9HhiXgPs5jvW+Kap+75vh4vwS2hTn+QnYqYi6ApJHFHiLUoquaeoIjwgVBEkQBVBAlQRJEAV
-        QQJUESRAFUECVBEkgItg82xOKrmnlHiMuTG4dPSzCMNtbv3XGZuGPhZheLE3PMLmfV08W/FA6OU5geRH
-        nrd5JotnKR4oPRRByR8I7lEEJX8g+VcRlHw9oCKQ/PzhJe42dcJVKBQKhUKhUCgUvWPQoH8AIFtSl1Lm
-        cRUAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAb0SURBVHhe7ZzrT1RHGIe1afvJXtMQ2y/1QqNNNdEW/oB+
+        a5uY1NYm7YfaSBCt1yqgrUVQa+sFQfAKu4vsgtp6SdqamtY2KdKqaeo1ARWFZWFBcIFdFrwsu/DO23nP
+        ziq2a7monDnnzJP8QoAs7DzvnJmz55yZUQqFQqFQKBQKhUIx0pQxluBkbBZPjhPgW2cfnN3TC/UlEQiU
+        RiBSGoZISRgC9DM7/S4C+0siLNvRy96n14o/oxgK5YwluwDyS/ugiotlLobohHtTSumLZk+/lPTeTXEP
+        sOIIVNnDkFcUYUnizyviwaU/zXtsRlkvXCrjwkl6LMOR7+CxR6KxhaMpDsPF3T0sw8HYU+LfKg4w9nwZ
+        wNpSgACJf3TyEYt6otkdgsDOEK7ZFcTnxNuwHog4mvf42eUAbWX8mxGTz7MrFM2OEPi332JLcxAfE2/L
+        GnDxiVz8yXISr5N8fgTgjtvRbL8JJwpDbKJ4e+aGj/UzufxOaeTfQtymBboLbrAPxds0H3SY87F+K4mX
+        Tz5i4U3EAi2QZ7oh6SDik/y0cr/88hG33kDM74Z9xYhPiLdvbEg+H3KOGka+SF43/GT4InDXo7l8l/Hk
+        I27h2dwF+w09HBljzI8vf0sXYi7PpiDkiuYYCy78A6PL36wVAPGbIPtINMsYOBmb6EIMmkH+RkonBjcE
+        cYJontxw3zTuy/Mh68Hl44YAPwo64A9qm2imvPAPWqmmk8/ztR/xqw72iWimnNCFNSdAuxnlr9cKAL6c
+        TnxWNFc++FnPOvPKR1zHs7aNZYvmygVdzx/RS8p6yG9HXOMDf2a7hPcTtJspZpfPk9OGuLqNLRfNlge6
+        fWgF+dk8WT64KJotB3QP1yrys338CODJamPTRfP1h26gW0r+dcRVrRJdonD1QbWV5H/ZiriyFc6L5usL
+        PXvzII+OGFH+Kp4vmoAtv4YvCA36QQ9NWU5+C+LnPCta2HtCg364ANdYUf7Ka7wAzWy10KAf2uOCVpTP
+        k9EMe4UG/XD24Rkrys9s1grwt9CgH84INFhTPuJnTVAvNOgHL4DfivIzmhDTG6BdaNAPRwTCVpOfTvJ5
+        lnuhR2jQD0c4WgCryNd6viYfcZkMBSgNg98q8u/2fJKPuNgjwRC0h0/C1uv5fAJuRFzaKMEkXMJPQ63W
+        86PyERd5JDgN1dZkmVh+/J6PuKRBG4LKhQb9cERYjtV6flQ+PwLqWZbQoB+0GtF6PZ+GH8SFHjZTaNAP
+        uhxNqxHNJH/Ans8zvxYgrUaCy9GEthTUQvIX1iMucMM50Xz9sYUh3wzyBzXskHyeT92wWTRff2gRtGV6
+        viaff/XgNNF8OSi+DVVWkT/fLdljKQStQDf/sEPyEdNqJXwwi5b/0wp0c/d8xHm14E+5LOlWB7tCsNbU
+        8usQ516V4D7w/aC9F3aGoM2s8tNq4HqaG58RzZWTHSGWYkr5tYgptexj0Ux5oWU8tPeC2eSn1kIlb9xo
+        0Uy5oY0vCm5h0Czy51wOh2dfNdhmHoXdbJY5ej7iGwercbzjVLFhjoAYtPGF3vKHc57fX/6bxxpwnP0U
+        vlJ+AV89VGOsItB8kH8DSo3a89853srln8TEsnM4+eBlnHqkEV//1VdkqCLQhhe53XDUaPJnnGjHcbaT
+        ONF1FicfuIRTfvTg9GPXMbmyC5MruoxVhBzEx3ODUGIU+W9XtETlO8/gpO8u4pQf6nHaL62YdDwYLQBP
+        UmVnoeGGI9r4Qnb5NOa/XHxC6/kk/7Xv3Tjt5xZMqui8I/9OKoIFhioCsakT393YAQHZJtyUmkg46XC1
+        NuEmus7hpANcPvV8TX4gjvwATDrc9ueLNq+xhiOCNr6gvRdkkU8fsuZcwQnjHX8VJpaf1yZcGvO1YSdu
+        zxfy7V7UYsQi0JC0voPNpuX/+skHf2odpt2Rx79OPnSlYOqRBm3C7T/m31e+kYtA0N4LtPyfVqCP1Jif
+        WgcddFUz7oU1LnH6b76C/4j/P/mxGLUIRI4Px9AK9GwfVD+qnj/XDVXzrrJlC6pxjPi38eESkyuD9xZh
+        IPmxGLkIMWgRNK3DXdUCF1Y0AQy359OjI/Pq4DzdQB/yPdz+RRis/FjMUIQYtBSUViNmNrOszGbYl94M
+        p9ObwM3jX+qF8BKexfXgX+QB9xIPnF5YD3vpiTV6aOqBn9uhIvwe3Dok+bGYqQi6wiWOtXkL40oeKKoI
+        DwlVBAlQRZAAVQQJUEWQAFUECVBFkABVBAmgItgbt8WVPFBsjcbcGFw6hlmEBLtH/3XGpmGIRUgo8obG
+        2r1viVcrHgqDnBO4/PBL9sYZ4lWKh8oARVDyR4L7FEHJH0n+VQQlXw94Ebj8vASbp0NNuAqFQqFQKBQK
+        hWJwjBr1D1YRUc6P3t1GAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="ToolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYtSURBVHhe7V1bixxFFJ599f7m3X8g4ruKmqy76e7pqhFW
+        1AfBdXXNCv6CRR8CiUneQ/ImJrq60N1jAkIglxfNJl6CoKDRnyBo1miiAR2/03MUhLO3meq6TNcHHyyz
+        PXVOfae7rqdrOhEREREREREREREREREbYNCZyk5mD6X9fHdW9N7ISv1WVuiDWamOpaV+n0h/Dz/D/yq1
+        VF+L73AJEeNgbnXuNgi7J63UoaRSn0Po37JKD0Zi/d38EgUrKXqz06enb2UzEZth9+rcnbizFyDceQh4
+        UxTXCFF2qc91K/UK2WTzEf+iW/SeTkr9IYJxQxawOSZVfh12V5J+/hS7015QGw9BLkhCuSD6octp2Zuj
+        /opdbAfoiUCz8bUkig+sA1OpJ9ndyUWyOncPKvse+oi/JSF8Y1rlp2aL3gPs/mQB7fQiArEuVdxv5ldp
+        oMHVCB95P78dd9oHcmVDoipUpe7iaoUJBOPRpNA/yhUMkfmVtOg9wtULC7ijdiEYv8oVC5iYZNLkkqsZ
+        BhCMF5ud2Lklhup/dkv9AlfXb2AUtRcO/yVVZJJY17HUr3O1/QTdNW0Ixn/E8B2T25e4+n6B+gw4+Ifo
+        +EQzv4lJ5AzL4AdoNEWdnezw5JMGL96MvmiZPC3095KjbSIN72c/mb2DZXEHNFUnJAfbSEyAP2JZ3ADB
+        WJQcazcdLbPQQuFwnUdyqsUs9PpM0buXZbKHyVifaoa0os0y2UHSz5+gMbjkTOSQ9nYgKfvD480lX5hU
+        6isrO4/otLqSAzY5f/q1wTc/fbsp6RrpuzaJCWPCsjUHNFWfScZtcunMm4OtQNdI37VJBGSNZWsGw71w
+        2bhNhhIQYqN9yTBVRzZskyEFhEajLJ9Z0LJAUucwyYZtMqSAoM+90UgyHsbWr8oG7TOsgNTzknmW0RzQ
+        mZ+XjLlgcAGp1FmW0QzqxGePtmRDCwht+RpN8KYsdMmQK4YWkJqlfoblHB945A6JRhwxxIBAwwMs5/io
+        388QjLhikE9IoS+ynGNi0JlCG3hNNOKIIQaENDSytkWvhEkGXDLIJwRMT6X3s6yjo1v0pqXCXTLUgNDS
+        E8s6OjDTXJIKN0FakSXhdsp9a/tZ9o1B10jf3YqNrhKbSKxDIW+LhRsgLZP7BvJJ8tUIS73Mso4OTPsP
+        i4UbYOsCUuiDLOvoQECOioUbYOsCUuVHWNbRgT6ksbyrFgbkOMs6OmJATNJAQGKTZZIGmqzYqRukiU49
+        DnsN0sSwN04MDdLExLA+4kgq3CFJuK1A10jfdUkjGSiqUg9KhbtkqAHJ+/l9LOsYiMvvRkhvWRlLLcVw
+        7ZJkxBVDDIjRLEYarklGXDHEgGBwtJ/lHB90coFsxA1DDAjtK7Gc44NSWCiVRTLkgqEFxHgaEAFj6HOS
+        MRcMLiCFPsMymgPawAXJmAuGFpCsn7/MMppDnWxd6N9Fg5YZUkDQXF1v7OTT+DrCztnY6wgEmvpLRm0z
+        rIA0fJgmDHwqGbbJUAKC5uoCy9YcMCdJJeM2SSuytEy+GRtdtd0m7Zw8N+hMpaW+LDkQ+T9+yYo1DzRb
+        j2fx4ICNSQeb2T6Iucnkh/Cp3mWZ7KH7cfduzEt+kR1qM/OrTg6fIfg0e/eGTczKdwLKNRIdayXVCsvi
+        DvRCaFKp72QH20T1Ax2rzrK4BR0A6ds2r1UWen1PpR5mOfxAfQ5KC4+JrfeJTL5haxJ4Up6Hg605SJnq
+        2i31c1x9P0HJYG0IyrCOapGr7TeSUj8LZ63/wJctUjNFrQFXNwxwnxLgL+psTgTjWurb0eLbBY2+ME+5
+        IlUsRNLw3rvR1E5BY3M0XxOw7pUfpzkXVyt8ICgLtM4jV9ZjFvpn58shTSG0n83DTbRKi6js/uSC9gro
+        XFtZBPfETfMF7fmwu+0B5iyPoeJnJVGcsD4CV3WNZamHimE2i1rBkNL6IZtkk1J1rO/whQBKxkNzMU9P
+        DU2+JAFNkMqm9E7qrL34EZYQQMnJCMwMmrV30JRcpAmZJO52SC/LoKw18AAtBGYns1vYTMQ4oB8KRtO2
+        C0/RXgi7XAerVMfwGeY56gQ+Pzr8TC/TNbRaYOSMqoiIiIiIiIiIiIiIiIlFp/MPsEwenBKAS1sAAAAA
+        SUVORK5CYII=
 </value>
   </data>
 </root>
