run package msbuild

--- a/man/biocad_registry/registry/registry/imports_pubchem.1
+++ b/man/biocad_registry/registry/registry/imports_pubchem.1
@@ -5,6 +5,7 @@ imports_pubchem \-
 .SH SYNOPSIS
 \fIimports_pubchem(\fBregistry\fR as <generic> biocad_registry, 
 \fBpubchem\fR as any, 
+\fBskip_from\fR as integer = 0, 
 [\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 registry
